objects/Sibling__c.object
<CustomObject>
    <fields>
        <fullName>Age_of_Student__c</fullName>
        <formula>IF(! ISBLANK( Birthdate__c ) , FLOOR( (TODAY() - Birthdate__c )/365.2425) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sibling Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Siblings (Sibling Name)</relationshipLabel>
        <relationshipName>Siblings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Students_Name__c</fullName>
        <label>Students Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Siblings</relationshipLabel>
        <relationshipName>Siblings1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sibling</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Sibling ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Siblings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Sibiling_is_from_same_family</fullName>
        <active>true</active>
        <errorConditionFormula>Sibling_Name__r.Account.Id &lt;&gt;  Students_Name__r.AccountId</errorConditionFormula>
        <errorDisplayField>Sibling_Name__c</errorDisplayField>
        <errorMessage>Sibling needs to be from same family.</errorMessage>
    </validationRules>
</CustomObject>